--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Document</title>
     </head>
     <body>
+        <img src=”alurastart.png>
         <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <h1>vai ser uma imagema aqui </h1>
             <ul>
                 <li>Estudante</li>
                 <li>Escola</li>
