--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Document</title>
     </head>
     <body>
-        <img src=”alurastart.png>
         <header>
+            <img scr="" ajt=""
         <h1>vai ser uma imagema aqui </h1>
             <ul>
                 <li>Estudante</li>
